# embedded_course

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakePresets_xxxyyy.json  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker_entrypoint.sh  post-start-command.sh
.github/: NO_BLANK_ISSUES.md
.github/ISSUE_TEMPLATE/: config.yml  eature-request.yml  feature-request.yml  software-bug-report.yml  task-template.yml
.github/workflows/: auto-priority.yml  label_by_context.yml  set-type-field.yml
ISSUE_TEMPLATE/: software-bug-report.yml  task-template.yml
software/nucleo_wba52cg_example/cubemx_ws/embedded_course_example_1_led_blink/: .cproject  .mxproject  .project  CMakeLists.txt  CMakePresets.json  Makefile  STM32WBA52xx_RAM.ld  compile_commands.json
software/nucleo_wba52cg_example/cubemx_ws/embedded_course_example_1_led_blink/EWARM/: Project.eww
software/nucleo_wba52cg_example/cubemx_ws/embedded_course_example_1_led_blink/Inc/: main.h  stm32wbaxx_hal_conf.h  stm32wbaxx_nucleo_conf.h
software/nucleo_wba52cg_example/cubemx_ws/embedded_course_example_1_led_blink/Src/: main.c
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/appTestA/: CMakeLists.txt
src/app/appTestA/src/: main.c
src/app/appTestB/: CMakeLists.txt
src/app/appTestB/src/: main.c
src/libs/: CMakeLists.txt
src/libs/libTestA/: CMakeLists.txt
src/libs/libTestA/inc/: lib_test_a.h
src/libs/libTestA/src/: lib_test_a.c
src/libs/libTestA/test/: test_lib_test_a.c
src/nucleo_wba52gc/: CMakeLists.txt
src/nucleo_wba52gc/cubemx_ws/: CMakeLists.txt
src/nucleo_wba52gc/cubemx_ws/embedded_course_example_1_led_blink/: CMakeLists.txt  Makefile  STM32WBA52xx_FLASH.ld  compile_commands.json  embedded_course_example_1_led_blink.ioc
src/nucleo_wba52gc/cubemx_ws/embedded_course_example_1_led_blink/EWARM/: embedded_course_example_1_led_blink.ewd  embedded_course_example_1_led_blink.ewp
src/nucleo_wba52gc/cubemx_ws/embedded_course_example_1_led_blink/Inc/: stm32wbaxx_it.h
src/nucleo_wba52gc/cubemx_ws/embedded_course_example_1_led_blink/Src/: gpio.c  main.c  stm32wbaxx_hal_msp.c  stm32wbaxx_it.c
tools/: CMakeLists.txt
tools/cmake/toolchain/arm/: gcc-arm-none-eabi.cmake
tools/cmake/toolchain/linux_host/: gcc-linux-host.cmake
tools/cmake/unit_test/: unit_test_helpers.cmake
tools/file_templates/: file_template_c.c  file_template_h.h
tools/tasks/: c_build.sh  c_clean.sh  c_flash.sh  c_gen_compile_commands.sh  c_unit_test.sh  run_ST_debugger.sh  run_stm32cubemx.sh
